# peplum

./: 404.html  ChangeLog.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: style-lint-and-test.yaml
changelog/: index.html
configuration/: index.html
features/: index.html
license/: index.html
search/: search_index.json
src/peplum/: __main__.py
src/peplum/app/: peplum.py
src/peplum/app/commands/: __init__.py  base.py  filtering.py  finding.py  main.py  navigation_sorting.py  peps_sorting.py
src/peplum/app/data/: __init__.py  config.py  notes.py  pep.py  peps.py
src/peplum/app/messages/: __init__.py  main.py
src/peplum/app/providers/: __init__.py  main.py  types.py
src/peplum/app/screens/: help.py  main.py  pep_viewer.py  search_input.py
src/peplum/app/widgets/: __init__.py  navigation.py  pep_details.py  peps_view.py  text_viewer.py
src/peplum/peps/: __init__.py  api.py  pep.py
tests/unit/: test_pep_dates.py  test_peps.py
