[project]
name = "peplum"
version = "0.0.1"
description = "Coming soon"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "httpx>=0.28.1",
    "textual>=1.0.0",
    "xdg-base-dirs>=6.0.2",
    "typing-extensions>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
peplum = "peplum.__main__:main"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "textual-dev>=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/peplum"]
