[project]
name = "peplum"
version = "1.0.1"
description = "A terminal-based PEP lookup manager"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "httpx>=0.28.1",
    "textual>=3.2.0",
    "xdg-base-dirs>=6.0.2",
    "typing-extensions>=4.12.2",
    "packaging>=24.2",
    "humanize>=4.11.0",
    "textual-fspicker>=0.4.0",
    "textual-enhanced>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
keywords = [
    "terminal",
    "tui",
    "chui",
    "documentation",
    "pep",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Education",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://peplum.davep.dev/"
Repository = "https://github.com/davep/peplum"
Documentation = "https://peplum.davep.dev/"
Source = "https://github.com/davep/peplum"
Issues = "https://github.com/davep/peplum/issues"
Discussions = "https://github.com/davep/peplum/discussions"

[project.scripts]
peplum = "peplum.__main__:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
dev-dependencies = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "textual-dev>=1.7.0",
    "codespell>=2.4.1",
    "mkdocs-material>=9.6.11",
    "markdown-exec>=1.10.3",
    "ruff>=0.12.9",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
